--- a/New folder (2)/no2.html
+++ b/New folder (2)/no2.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     <div class="container">
+        <div class="hearts">
+            <span style="left:10%">💖</span>
+            <span style="left:30%">💗</span>
+            <span style="left:50%">💘</span>
+            <span style="left:70%">💕</span>
+            <span style="left:90%">💓</span>
+        </div>
         <div class="tenor-gif-embed" data-postid="15195810" data-share-method="host" data-aspect-ratio="1" data-width="100%"><a href="https://tenor.com/view/couple-forgive-me-asking-for-forgiveness-begging-crying-gif-15195810">Couple Forgive Me Sticker</a>from <a href="https://tenor.com/search/couple-stickers">Couple Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
         <h1>Please Give it Another THought😖 </h1>
         
