--- a/New folder (2)/no3.html
+++ b/New folder (2)/no3.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     <div class="container">
+        <div class="hearts">
+            <span style="left:10%">💖</span>
+            <span style="left:30%">💗</span>
+            <span style="left:50%">💘</span>
+            <span style="left:70%">💕</span>
+            <span style="left:90%">💓</span>
+        </div>
         <div class=tenor-gif-embed data-postid=8971887970741243461 data-share-method=host data-aspect-ratio=1.07246 data-width=100%><a href=https://tenor.com/view/cry-gif-8971887970741243461>cry sticker</a>from <a href=https://tenor.com/search/cry-stickers>cry stickers</a></div> <script type=text/javascript async src=https://tenor.com/embed.js></script>
 
         <h1>Pleaseeeeee, Just for once!!!</h1>
